# Clasificacion_Marketing

./: README.md  model.py  pyproject.toml
notebooks/: feature_enginieering.ipynb
predictions/: predicciones.json
