[tool.poetry]
name = "modelo-marketing"
version = "0.1.0"
description = "Predicción de targets de marketing con RandomForest"
authors = ["Jeffersson jpretell66@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26"
scikit-learn = "^1.4"
imbalanced-learn = "^0.12"
matplotlib = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
